<resources>
    <string name="app_name">IMGame dashboard</string>
    <string name="btnText">ЗАГРУЗИТЬ</string>
    <string name="reviews_picture">Reviews Picture</string>
    <string name="full_review_image">full review image</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Пользователи</string>
    <string name="tab_text_2">Отзывы</string>
    <string name="tab_text_3">Комнаты</string>
    <string name="tab_text_4">Настройки</string>
    <string name="addReview">Добавить отзыв</string>
    <string name="zeroStar">0 звёзд</string>
    <string name="oneStar">1 звезда</string>
    <string name="twoStars">2 звезды</string>
    <string name="threeStars">3 звезды</string>
    <string name="fourStars">4 звезды</string>
    <string name="fiveStars">5 звёзд</string>
    <string name="mark">Оценка:</string>
    <string name="textReview">Отзыв</string>
    <string name="numberOfRoom">Номер комнаты</string>
    <string name="edit">Изменить</string>
    <string name="headerUpdateConfig">Редактирование настроек глобальной конфигурации</string>
    <string name="save">Сохранить</string>
    <string name="authTitle">Вход в dashboard IMGame</string>
    <string name="logInBtn">Войти</string>
    <string name="loginHint">Логин</string>
    <string name="passwordHint">Пароль</string>
    <string name="headerAddReview">Добавление отзыва</string>
    <string name="delete">Удалить</string>
</resources>
